# fabriccicddemo

./: azure-pipelines.yml
fabric-ci-cd/: pyproject.toml
fabric-ci-cd/fabric_ci_cd/: main.py
fabric/9ac55e94-4df4-4f51-9a04-296e40fca212.Notebook/: .platform  notebook-content.py
fabric/test_foo.Notebook/: .platform  notebook-content.py
fabric/testing.Environment/: .platform
fabric/testing.Environment/Libraries/CustomLibraries/: pytestmsfabric-0.3.7-py3-none-any.whl
fabric/testing.Environment/Libraries/PublicLibraries/: environment.yml
fabric/testing.Environment/Setting/: Sparkcompute.yml
fabric/testrunner.Notebook/: .platform  notebook-content.py
fabric/tests.Lakehouse/: .platform
